# Navigator

./: .gitattributes  .gitignore  LICENSE  README.md  steps.txt
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/deploy/: Dockerfile  devcontainer.json
.devcontainer/train/: Dockerfile  devcontainer.json
.github/workflows/: build-base-image.yml  build-deploy-image.yml  build-docker.yml
conversion_onnx_old/: tf2_to_frozen.py
deploy/: CMakeLists.txt  Dockerfile  README.md
deploy/.devcontainer/: devcontainer.json
deploy/rigger/: CMakeLists.txt  client.c  server.c
deploy/src/: CMakeLists.txt  cnn_runner.cpp  cnn_runner.h  cnn_runner.hpp  hailo_runner.cpp  hailo_runner.hpp  helpers.h  helpers.hpp  large_model_download.sh  libcamera_factory.hpp  main.cpp  mask_limit_finders.cpp  mask_limit_finders.h  minimal.cc  motor_driver.cpp  motor_driver.h  movement_controller.cpp  movement_controller.h  process_video.cpp  process_video.h  process_video.hpp  river_mask_generator.cpp  river_mask_generator.h  river_mask_generator.hpp  snippets.cc  standard_model_download.sh  tflite_handler.cpp  tflite_handler.h  tflite_runner.cpp  tflite_runner.hpp  webserver.cpp  webserver.h  weighted_moving_average.cpp  weighted_moving_average.hpp
deploy/src/web/: control.html
docker/navigator-base/: Dockerfile
docker/navigator-deploy/: Dockerfile
docker/navigator-release/: Dockerfile
training/: README.md  augment_test.py  core.py  mass_convert.py  new_train.py  requirements.txt  retrain.py  rivers.py  tf_to_other.py  tf_to_tflite.py  train.py  view.py  view_hef.py
training/output/: model.tflite
training/output/weights/: 80_80_good.weights.h5  96_96_GOOD.weights.h5
